# 1111111111111111111111

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/algorithms/sorting/: sorting.c  sorting.h
libs/data_stuctures/: CMakeLists.txt
libs/data_stuctures/matrix/: matrix.c  matrix.h
libs/data_stuctures/sets/: booleans_array.c  booleans_array.h  ordered_array.c  ordered_array.h  unordered_array.c  unordered_array.h
libs/data_stuctures/vector/: vector.c  vector.h
str/string/: string_.c  string_.h
str/string/tasks/: countOfPalindromes.h  digitToStartWithPreservingOrderForAll.h  getLastWordInFirstStringThatAvailableInTheSecondString.h  getStringWithAlternatingWordsOfTwoStrings.h  hasEqualWords.h  hasPairOfWordThatMadeOfTheSameLetters.h  isLexigraphicallyOrderedString.h  printReverseWordsOneByOneToString.h  printWordBeforeFirstWordWithA.h  removeAdjacentEqualLetters.h  removeNonLetters.h  reversesWordOrder.h  tasks.c  tasks.h  transformsAllWordsW1ToW2.h  transformsNumbersToSpaces.h  transformsToStringOfWordsOtherThanLastWord.h
